[package]
name = "netidx-excel"
version = "0.1.0"
edition = "2021"

[dependencies]
com = { version = "0.6", features = ["production"] }
winapi = { version = "0.3", features = ["oaidl", "winuser", "winnt", "winerror"]}
oaidl = "0.2"
log = "0.4"
simplelog = "0.11"
once_cell = "1"
parking_lot = "0.11"
netidx = "0.10"
netidx-core = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
fxhash = "0.2"
anyhow = "1"
arcstr = "1"

[lib]
crate-type = ["rlib", "cdylib"]
