[package]
name = "netidx-excel"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Pull realtime Netidx data into Excel with RTD"
homepage = "https://estokes.github.io/netidx-book/"
repository = "https://github.com/estokes/netidx-excel/"
readme = "README.md"
keywords = ["network", "networking", "distributed", "kerberos"]
categories = ["network-programming"]

[dependencies]
com = { version = "0.6", features = ["production"] }
log = { version = "0.4", features = ["serde"] }
simplelog = "0.11"
once_cell = "1"
parking_lot = "0.11"
netidx = "0.10"
netidx-core = "0.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
fxhash = "0.2"
anyhow = "1"
dirs = "3"
serde = "1"
serde_json = "1"
serde_derive = "1"
winreg = "0.10"

[dependencies.windows]
version = "0.28"
features = [
    "Win32_System_Com_StructuredStorage", 
    "Win32_System_Com", 
    "Win32_System_Com_Marshal",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_Globalization",
    "Win32_System_Threading",
    "Win32_Security",
]

[lib]
crate-type = ["rlib", "cdylib"]
